<resources>
    <string name="app_name">Fruit Hub</string>

    <!--  Commons  -->
    <string name="common_error">Error</string>
    <string name="common_attention">Attention</string>
    <string name="common_ok">OK</string>
    <string name="common_repeat">Repeat</string>

    <!--  Menu  -->
    <string name="menu_catalog">Catalog</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_cart">Cart</string>

    <!--  Error titles  -->
    <string name="error_title_connect">Проблемы с сетью</string>
    <string name="error_title_internal_server">Ошибка на сервере</string>
    <string name="error_title_server_unavailable">Сервер недоступен</string>
    <string name="error_title_page_not_found">Страница не найдена</string>

    <!--  Error messages  -->
    <string name="error_message_unknown">В приложении возникла ошибка</string>
    <string name="error_message_connect">Проверьте подключение к WI-FI или сотовой сети и повторите попытку</string>
    <string name="error_message_timeout">Время выполнения запроса истекло. Проверьте подключение к WI-FI или сотовой сети и повторите попытку</string>
    <string name="error_message_page_not_found">Страница не найдена. Пожалуйста, повторите попытку позже</string>
    <string name="error_message_internal_server">Ошибка на сервере. Пожалуйста, повторите попытку позже</string>
    <string name="error_message_server_unavailable">Сервер временно недоступен. Пожалуйста, повторите попытку позже</string>
    <string name="error_message_malformed_json">Ошибка загрузки данных. Пожалуйста, повторите попытку позже</string>

    <!--  WelcomeFragment  -->
    <string name="fragment_welcome_title">Get The Freshest Fruit Salad Combo</string>
    <string name="fragment_welcome_continue">Let\'s continue</string>
    <string name="fragment_welcome_description">We deliver the best and freshest fruit salad in town. Order for a combo today!!!</string>

    <!--  AuthFragment  -->
    <string name="fragment_auth_start_ordering">Start ordering</string>
    <string name="fragment_auth_please_enter_name">Please enter your name</string>
    <string name="fragment_auth_hint_name">Your name</string>
    <string name="fragment_auth_what_is_name">What is your name?</string>
</resources>