<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AuthFragment">

    <ScrollView
        android:id="@+id/sv_auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:paddingBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_auth_fruit_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="301dp"
                    android:layout_height="281.21dp"
                    android:layout_marginTop="128.79dp"
                    android:src="@drawable/auth_fruit_cart" />

                <View
                    android:layout_width="301dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/common_fruit_cart_shadow" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_auth_what_is_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_auth_what_is_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_auth_fruit_cart" />

            <EditText
                android:id="@+id/et_auth_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/auth_user_name_background"
                android:hint="@string/fragment_auth_hint_name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_auth_what_is_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_auth_start_ordering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/common_primary_button_background"
        android:fontFamily="@font/brandon_grotesque_medium"
        android:text="@string/fragment_auth_start_ordering"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
