<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.WelcomeFragment">

    <ScrollView
        android:id="@+id/sv_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:paddingBottom="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/ll_welcome_fruit_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="301dp"
                    android:layout_height="260dp"
                    android:layout_marginTop="150dp"
                    android:src="@drawable/welcome_fruit_cart" />

                <View
                    android:layout_width="301dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/common_fruit_cart_shadow" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_welcome_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/brandon_grotesque_medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_welcome_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_welcome_fruit_cart"
                tools:text="some large text some large text some large text some large text some large text some large text" />

            <TextView
                android:id="@+id/tv_welcome_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandon_grotesque_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/fragment_welcome_description"
                android:textColor="@color/black_5d5"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_title"
                tools:text="some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text some large text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_welcome_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/common_primary_button_background"
        android:fontFamily="@font/brandon_grotesque_medium"
        android:text="@string/fragment_welcome_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>
